# pokeapi-csv

./: README.md  pyproject.toml
.github/workflows/: run.yml
src/pokeapi_csv/: __init__.py  cli.py  specification.py  writer.py
src/pokeapi_csv/specifications/: pokemon.py  pokemon_species.py  pokemon_sprites.py
